Refactor plate thickness handling and assembly creation
- Replace hardcoded plate thickness dictionary in Control.cs with new StationToolingStructure class for better encapsulation and access.
- Add StationToolingStructure.cs; remove obsolete ToolingStructure.cs.
- Update Control.cs to use StationToolingStructure for plate data.
- Rename NXDrawing.CreateAssembly to CreateStationAssembly and add fileName parameter for flexible naming.
- Improve InsertComponent2 in NXDrawing.cs to use actual component names and fix inserted components with NXOpen.Positioning constraints.
- Update .csproj to reflect file additions/removals.
- Enhances code organization, flexibility, and maintainability.

--- a/TestCreateNewPlate/TestCreateNewPlate.csproj
+++ b/TestCreateNewPlate/TestCreateNewPlate.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Main\MyProgram.cs" />
     <Compile Include="Main\Unload.cs" />
     <Compile Include="Model\NXDrawing.cs" />
-    <Compile Include="Model\ToolingStructure.cs" />
+    <Compile Include="Model\StationToolingStructure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\Form1.cs">
       <SubType>Form</SubType>
