--- a/TestCreateNewPlate/TestCreateNewPlate.csproj
+++ b/TestCreateNewPlate/TestCreateNewPlate.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Main\MyProgram.cs" />
     <Compile Include="Main\Unload.cs" />
     <Compile Include="Model\NXDrawing.cs" />
+    <Compile Include="Model\Plate.cs" />
+    <Compile Include="Model\Shoe.cs" />
     <Compile Include="Model\StationToolingStructure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\Form1.cs">
