Refactor plate and assembly management with ToolingAssembly
Introduce ToolingAssembly class to centralize logic for plate thicknesses, station assemblies, and NX insertion. Update Control to use ToolingAssembly, passing plate thicknesses via a dictionary. Remove hardcoded plate constants and obsolete methods from NXDrawing. Update project file to include ToolingAssembly and remove StationToolingStructure. Clean up and adjust codebase to support the new structure, improving maintainability and extensibility.

--- a/TestCreateNewPlate/TestCreateNewPlate.csproj
+++ b/TestCreateNewPlate/TestCreateNewPlate.csproj
@@ -69,7 +69,7 @@
     <Compile Include="Model\NXDrawing.cs" />
     <Compile Include="Model\Plate.cs" />
     <Compile Include="Model\Shoe.cs" />
-    <Compile Include="Model\StationToolingStructure.cs" />
+    <Compile Include="Model\ToolingAssembly.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\Form1.cs">
       <SubType>Form</SubType>
