Add resource file and expand tool structure form UI
Added Resource.resx and its designer for image embedding, including ToolingStructure.jpg as a project resource. Updated the .csproj to handle resource embedding and designer auto-generation. Significantly expanded the tool structure creation form with a new group box for plate thickness inputs, labeled text boxes with numeric validation, and a PictureBox for visual reference. Improved input validation, UI layout, and Apply button logic for a more robust and user-friendly experience. No changes were made to Form1.resx.

--- a/TestCreateNewPlate/TestCreateNewPlate.csproj
+++ b/TestCreateNewPlate/TestCreateNewPlate.csproj
@@ -71,6 +71,11 @@
     <Compile Include="Model\Shoe.cs" />
     <Compile Include="Model\ToolingAssembly.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
     <Compile Include="View\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,9 +84,16 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ToolingStructure.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
