Add ParallelBar plate type and class skeleton
Added PARALLELBAR (87) to PlateType enum in NXDrawing.cs. Created Model/ParallelBar.cs with an empty ParallelBar class. Updated TestCreateNewPlate.csproj to include the new file.

--- a/TestCreateNewPlate/TestCreateNewPlate.csproj
+++ b/TestCreateNewPlate/TestCreateNewPlate.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Main\MyProgram.cs" />
     <Compile Include="Main\Unload.cs" />
     <Compile Include="Model\NXDrawing.cs" />
+    <Compile Include="Model\ParallelBar.cs" />
     <Compile Include="Model\Plate.cs" />
     <Compile Include="Model\Shoe.cs" />
     <Compile Include="Model\ToolingAssembly.cs" />
