Add CommonPlate class and integrate into plate workflow
Introduced the CommonPlate class in Model\CommonPlate.cs to encapsulate creation of "Common Plate" parts using NXOpen APIs, with configurable dimensions and template-based part generation. Updated Control.cs to use CommonPlate in the plate creation workflow. Refactored Shoe.cs to use new constants for template and file info. Modified ToolingAssembly.cs to insert CommonPlate into assemblies. Added CommonPlate.cs to the project file for build inclusion.

--- a/TestCreateNewPlate/TestCreateNewPlate.csproj
+++ b/TestCreateNewPlate/TestCreateNewPlate.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Controller\Control.cs" />
     <Compile Include="Main\MyProgram.cs" />
     <Compile Include="Main\Unload.cs" />
+    <Compile Include="Model\CommonPlate.cs" />
     <Compile Include="Model\NXDrawing.cs" />
     <Compile Include="Model\ParallelBar.cs" />
     <Compile Include="Model\Plate.cs" />
