Add Feat: 1. Add combo box for machine selection on UI 2. Add ICommonPlate interface 3. Use common plate properties to provide the length and width of the common plate object.

--- a/ToolingStructureCreation/ToolingStructureCreation.csproj
+++ b/ToolingStructureCreation/ToolingStructureCreation.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Main\MyProgram.cs" />
     <Compile Include="Main\Unload.cs" />
     <Compile Include="Model\CommonPlate.cs" />
+    <Compile Include="Model\ICommonPlate.cs" />
+    <Compile Include="Model\Machine.cs" />
     <Compile Include="Model\NXDrawing.cs" />
     <Compile Include="Model\ParallelBar.cs" />
     <Compile Include="Model\Plate.cs" />
