Add Feat: 1. Add StripLayout class. 2. Include StripLayout to the Tool Assembly. 3. Adjust the position of the components.

--- a/ToolingStructureCreation/ToolingStructureCreation.csproj
+++ b/ToolingStructureCreation/ToolingStructureCreation.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Model\SketchSelection.cs" />
     <Compile Include="Model\Shoe.cs" />
     <Compile Include="Model\StationAssemblyFactory.cs" />
+    <Compile Include="Model\StripLayout.cs" />
     <Compile Include="Model\ToolingAssembly.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource.Designer.cs">
