Add Project Info: 1. Created Desinger class 2. Created ProjectInfo class 3. Change UI to fit the requirement.

--- a/ToolingStructureCreation/ToolingStructureCreation.csproj
+++ b/ToolingStructureCreation/ToolingStructureCreation.csproj
@@ -67,11 +67,13 @@
     <Compile Include="Main\MyProgram.cs" />
     <Compile Include="Main\Unload.cs" />
     <Compile Include="Model\CommonPlate.cs" />
+    <Compile Include="Model\Designer.cs" />
     <Compile Include="Model\ICommonPlate.cs" />
     <Compile Include="Model\Machine.cs" />
     <Compile Include="Model\NXDrawing.cs" />
     <Compile Include="Model\ParallelBar.cs" />
     <Compile Include="Model\Plate.cs" />
+    <Compile Include="Model\ProjectInfo.cs" />
     <Compile Include="Model\Sketch.cs" />
     <Compile Include="Model\SketchSelection.cs" />
     <Compile Include="Model\Shoe.cs" />
