--- a/ToolingStructureCreation/ToolingStructureCreation.csproj
+++ b/ToolingStructureCreation/ToolingStructureCreation.csproj
@@ -86,6 +86,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
+    <Compile Include="Services\AsmCodeGeneratorServicecs.cs" />
     <Compile Include="Services\CodeGeneratorService.cs" />
     <Compile Include="Services\ICodeGeneratorServices.cs" />
     <Compile Include="Services\PlateCodeGeneratorService.cs" />
