--- a/ToolingStructureCreation/ToolingStructureCreation.csproj
+++ b/ToolingStructureCreation/ToolingStructureCreation.csproj
@@ -67,8 +67,10 @@
     <Compile Include="Main\MyProgram.cs" />
     <Compile Include="Main\Unload.cs" />
     <Compile Include="Model\CommonPlate.cs" />
+    <Compile Include="Model\CommonPlateBase.cs" />
+    <Compile Include="Model\CommonPlateLeft.cs" />
+    <Compile Include="Model\CommonPlateRight.cs" />
     <Compile Include="Model\Designer.cs" />
-    <Compile Include="Model\ICommonPlate.cs" />
     <Compile Include="Model\Machine.cs" />
     <Compile Include="Model\NXDrawing.cs" />
     <Compile Include="Model\ParallelBar.cs" />
