Refactored: Phase 1, Step 1 Plate entity.

--- a/ToolingStructureCreation/ToolingStructureCreation.csproj
+++ b/ToolingStructureCreation/ToolingStructureCreation.csproj
@@ -64,7 +64,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\Control.cs" />
+    <Compile Include="Domain\Entities\Plate.cs" />
+    <Compile Include="Domain\Enums\PlateColor.cs" />
+    <Compile Include="Domain\Enums\PlateType.cs" />
     <Compile Include="Domain\ValueObjects\Dimensions.cs" />
+    <Compile Include="Domain\ValueObjects\Position3D.cs" />
     <Compile Include="Main\MyProgram.cs" />
     <Compile Include="Main\Unload.cs" />
     <Compile Include="Model\CommonPlate.cs" />
@@ -76,7 +80,7 @@
     <Compile Include="Model\NXDrawing.cs" />
     <Compile Include="Model\ParallelBar.cs" />
     <Compile Include="Model\PartProperties.cs" />
-    <Compile Include="Model\Plate.cs" />
+    <Compile Include="Model\PlateLegacy.cs" />
     <Compile Include="Model\ProjectInfo.cs" />
     <Compile Include="Model\Sketch.cs" />
     <Compile Include="Model\SketchSelection.cs" />
@@ -116,9 +120,6 @@
   <ItemGroup>
     <None Include="Resources\ToolingStructure.jpg" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Domain\Entities\" />
-    <Folder Include="Domain\Enums\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
