--- a/ToolingStructureCreationTests/ToolingStructureCreationTests.csproj
+++ b/ToolingStructureCreationTests/ToolingStructureCreationTests.csproj
@@ -71,6 +71,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Domain\Entities\PlateTests.cs" />
     <Compile Include="Domain\ValueObjects\DimensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CodeGeneratorServiceTests.cs" />
