--- a/ToolingStructureCreationTests/ToolingStructureCreationTests.csproj
+++ b/ToolingStructureCreationTests/ToolingStructureCreationTests.csproj
@@ -72,7 +72,9 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Domain\Entities\PlateTests.cs" />
+    <Compile Include="Domain\Entities\ShoeTests.cs" />
     <Compile Include="Domain\ValueObjects\DimensionsTests.cs" />
+    <Compile Include="Domain\ValueObjects\DrawingCodeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CodeGeneratorServiceTests.cs" />
   </ItemGroup>
