--- a/ToolingStructureCreationTests/ToolingStructureCreationTests.csproj
+++ b/ToolingStructureCreationTests/ToolingStructureCreationTests.csproj
@@ -74,6 +74,10 @@
     <Compile Include="Domain\Entities\ParallelBarTests.cs" />
     <Compile Include="Domain\Entities\PlateTests.cs" />
     <Compile Include="Domain\Entities\ShoeTests.cs" />
+    <Compile Include="Domain\Services\NamingConventionServiceTests.cs" />
+    <Compile Include="Domain\Services\PlateThicknessCalculatorTests.cs" />
+    <Compile Include="Domain\Services\PositionCalculatorTests.cs" />
+    <Compile Include="Domain\Services\ToolingGeometryServiceTests.cs" />
     <Compile Include="Domain\ValueObjects\DimensionsTests.cs" />
     <Compile Include="Domain\ValueObjects\DrawingCodeTests.cs" />
     <Compile Include="Domain\ValueObjects\MachineSpecificationTests.cs" />
