Refactor: centralize parameters, add DDD & comprehensive tests
Introduced ToolingParameters class to encapsulate all user-specified parameters for tooling structure creation, eliminating hardcoded values and enabling a more domain-driven, user-configurable architecture. Refactored ToolingStructureAggregate and related services to use ToolingParameters, modularized component generation, and updated business rules for required plates. Enhanced PositionCalculator to use parameterized thicknesses. Added comprehensive unit tests for StationAggregate and ToolingStructureAggregate, and updated existing tests to reflect new parameterization. Updated project files to include new source and test files.

--- a/ToolingStructureCreationTests/ToolingStructureCreationTests.csproj
+++ b/ToolingStructureCreationTests/ToolingStructureCreationTests.csproj
@@ -71,6 +71,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Domain\Aggregates\StationAggregateTests.cs" />
+    <Compile Include="Domain\Aggregates\ToolingStructureAggregateTests.cs" />
     <Compile Include="Domain\Entities\ParallelBarTests.cs" />
     <Compile Include="Domain\Entities\PlateTests.cs" />
     <Compile Include="Domain\Entities\ShoeTests.cs" />
