--- a/ToolingStructureCreation/ToolingStructureCreation.csproj
+++ b/ToolingStructureCreation/ToolingStructureCreation.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Domain\Services\SketchGeometry.cs" />
     <Compile Include="Domain\Services\SketchValidationResult.cs" />
     <Compile Include="Domain\Services\ToolingGeometryService.cs" />
+    <Compile Include="Domain\Services\ToolingParameters.cs" />
     <Compile Include="Domain\Services\ToolingThicknessSummary.cs" />
     <Compile Include="Domain\ValueObjects\Dimensions.cs" />
     <Compile Include="Domain\ValueObjects\DrawingCode.cs" />
