--- a/ToolingStructureCreation/ToolingStructureCreation.csproj
+++ b/ToolingStructureCreation/ToolingStructureCreation.csproj
@@ -93,9 +93,13 @@
     </Compile>
     <Compile Include="Services\AsmCodeGeneratorServicecs.cs" />
     <Compile Include="Services\CodeGeneratorService.cs" />
+    <Compile Include="Services\FormValidationData.cs" />
+    <Compile Include="Services\FormValidator.cs" />
     <Compile Include="Services\ICodeGeneratorServices.cs" />
     <Compile Include="Services\PlateCodeGeneratorService.cs" />
     <Compile Include="Services\ShoeCodeGeneratorService.cs" />
+    <Compile Include="Services\UnifiedCodeGeneratorService.cs" />
+    <Compile Include="Services\ValidationResult.cs" />
     <Compile Include="View\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
