--- a/ToolingStructureCreationTests/ToolingStructureCreationTests.csproj
+++ b/ToolingStructureCreationTests/ToolingStructureCreationTests.csproj
@@ -71,9 +71,9 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="Model\SketchSelectionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CodeGeneratorServiceTests.cs" />
+    <Compile Include="Services\ManufacturingCalculationServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -83,6 +83,9 @@
       <Project>{FD23D1A7-59D4-4707-AC32-1340750ED0EC}</Project>
       <Name>ToolingStructureCreation</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
