--- a/ToolingStructureCreation/ToolingStructureCreation.csproj
+++ b/ToolingStructureCreation/ToolingStructureCreation.csproj
@@ -84,8 +84,14 @@
     <Compile Include="Model\StripLayout.cs" />
     <Compile Include="Model\TitleBlockProperties.cs" />
     <Compile Include="Model\ToolingAssembly.cs" />
+    <Compile Include="Model\ToolingInfo.cs" />
     <Compile Include="Model\ToolProperties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Resource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -110,6 +116,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
@@ -120,6 +130,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ToolingStructure.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PartialCoverGuide.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\FullCoverGuide.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
