--- a/ToolingStructureCreation/ToolingStructureCreation.csproj
+++ b/ToolingStructureCreation/ToolingStructureCreation.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Model\CommonPlateNoClampSlot.cs" />
     <Compile Include="Model\CommonPlateRight.cs" />
     <Compile Include="Model\Designer.cs" />
+    <Compile Include="Model\LowerShoe.cs" />
     <Compile Include="Model\Machine.cs" />
     <Compile Include="Model\MatGuideFullBase.cs" />
     <Compile Include="Model\MatGuideFullFront.cs" />
@@ -81,15 +82,16 @@
     <Compile Include="Model\PartProperties.cs" />
     <Compile Include="Model\Plate.cs" />
     <Compile Include="Model\ProjectInfo.cs" />
+    <Compile Include="Model\ShoeBase.cs" />
     <Compile Include="Model\Sketch.cs" />
     <Compile Include="Model\SketchSelection.cs" />
-    <Compile Include="Model\Shoe.cs" />
     <Compile Include="Model\StationAssemblyFactory.cs" />
     <Compile Include="Model\StripLayout.cs" />
     <Compile Include="Model\TitleBlockProperties.cs" />
     <Compile Include="Model\ToolingAssembly.cs" />
     <Compile Include="Model\ToolingInfo.cs" />
     <Compile Include="Model\ToolProperties.cs" />
+    <Compile Include="Model\UpperShoe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
